# diffdrive

diffdrive/: README.md
diffdrive/GUI/: CMakeLists.txt  package.xml
diffdrive/GUI/launch/: teleop_gui.py  teleop_gui_launch.py
diffdrive/LIO-SAM/: CMakeLists.txt
diffdrive/LIO-SAM/config/: rviz2.rviz
diffdrive/LIO-SAM/src/: imuPreintegration.cpp
diffdrive/diff_description/: CMakeLists.txt  package.xml
diffdrive/diff_description/config/: my_controllers.yaml  robot.rviz  teleop_twist_joy.yaml
diffdrive/diff_description/launch/: gazebo.launch.py  rviz_joint_control.launch.py
diffdrive/diff_description/models/asphalt_plane/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_BalconyTable_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Bed_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Board_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_ChairA_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_ChairD_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Chandelier_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_CookingBench_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Curtain_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitB_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitC_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitD_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitD_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitD_03/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_DeskPortraitD_04/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Door_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Dumbbell_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_FitnessEquipment_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_FloorB_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_FoldingDoor_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_FoldingDoor_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Handle_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_KitchenCabinet_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_KitchenTable_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_KitchenUtensils_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_LightC_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_NightStand_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_Pillow_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitA_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitA_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitB_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitB_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitB_03/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitC_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitD_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitD_02/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitE_01/: model.sdf
diffdrive/diff_description/models/aws_robomaker_residential_PortraitE_02/: model.sdf
diffdrive/diff_description/models/construction_barrel/: model.sdf
diffdrive/diff_description/scripts/: cmd_vel_stamper.py
diffdrive/diff_description/urdf/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
diffdrive/diff_description/worlds/: diff_description.world  empty.world  house.world  outdoor.world  smalltown.world  terrain_test.world
diffdrive/lio_sam_bringup/: CMakeLists.txt  costmap_plugins.xml  package.xml
diffdrive/lio_sam_bringup/config/: ekf_monitoring.yaml  lio_sam_params.yaml  nav2_params.yaml  nav2_params_localization.yaml  nav2_params_outdoor.yaml  nav2_params_outdoor_route.yaml  navigate_w_route.xml  navsat_transform_outdoor.yaml  rviz_outdoor.rviz
diffdrive/lio_sam_bringup/graphs/: smalltown_demo_graph.geojson
diffdrive/lio_sam_bringup/include/lio_sam_bringup/: elevation_traversability_layer.hpp
diffdrive/lio_sam_bringup/launch/: lio_sam_gps_outdoor_launch.py  lio_sam_localization_launch.py  lio_sam_slam_launch.py  nav2_bringup_launch.py
diffdrive/lio_sam_bringup/scripts/: georeference_map.py  gps_fix_from_odom.py  latlon_graph_builder.py
diffdrive/lio_sam_bringup/src/: elevation_traversability_layer.cpp  gz_lidar_to_ouster.cpp  pcd_map_localizer.cpp
diffdrive/mola_bringup/: CMakeLists.txt  package.xml
diffdrive/mola_bringup/config/: nav2_params.yaml
diffdrive/mola_bringup/launch/: build_2d_map_launch.py  mola_localize_launch.py  mola_slam_launch.py  nav2_bringup_launch.py
diffdrive/mola_bringup/mola_bringup/: plot_lidar_trajectory.py  pointcloud_to_occupancygrid.py
(+38 files in other folders)
