<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lio_sam_bringup</name>
  <version>0.0.0</version>
  <description>Gazebo/Nav2 integration for LIO-SAM: adapts the simulated Ouster OS1
    lidar's point cloud to LIO-SAM's OusterPointXYZIRT format, and provides SLAM +
    Nav2 launch files and configs.</description>
  <maintainer email="ducanh97yp@gmail.com">andy</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
