<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lio_sam_bringup</name>
  <version>0.0.0</version>
  <description>Gazebo/Nav2 integration for LIO-SAM: adapts the simulated Ouster OS1
    lidar's point cloud to LIO-SAM's OusterPointXYZIRT format, and provides SLAM +
    Nav2 launch files and configs.</description>
  <maintainer email="ducanh97yp@gmail.com">andy</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav2_costmap_2d</depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_route</exec_depend>
  <exec_depend>rviz_satellite</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>proj-bin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
